k8s-cloud/01-rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-rolling
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: aceest
  template:
    metadata:
      labels:
        app: aceest
    spec:
      containers:
      - name: aceest
        image: ihyth32/aceest-fitness:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-rolling-svc
spec:
  type: ClusterIP
  selector:
    app: aceest
  ports:
  - port: 80
    targetPort: 5000
