k8s-cloud/02-blue-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-bg
      color: blue
  template:
    metadata:
      labels:
        app: aceest-bg
        color: blue
    spec:
      containers:
      - name: aceest
        image: ihyth32/aceest-fitness:v4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests: { memory: "128Mi", cpu: "100m" }
          limits: { memory: "256Mi", cpu: "300m" }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-bg
      color: green
  template:
    metadata:
      labels:
        app: aceest-bg
        color: green
    spec:
      containers:
      - name: aceest
        image: ihyth32/aceest-fitness:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests: { memory: "128Mi", cpu: "100m" }
          limits: { memory: "256Mi", cpu: "300m" }
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-bg-svc
spec:
  type: ClusterIP
  selector:
    app: aceest-bg
    color: blue
  ports:
  - port: 80
    targetPort: 5000
