k8s-cloud/03-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-stable
spec:
  replicas: 4
  selector:
    matchLabels:
      app: aceest-canary
      track: stable
  template:
    metadata:
      labels:
        app: aceest-canary
        track: stable
    spec:
      containers:
      - name: aceest
        image: ihyth32/aceest-fitness:v4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests: { memory: "128Mi", cpu: "100m" }
          limits: { memory: "256Mi", cpu: "300m" }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aceest-canary
      track: canary
  template:
    metadata:
      labels:
        app: aceest-canary
        track: canary
    spec:
      containers:
      - name: aceest
        image: ihyth32/aceest-fitness:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests: { memory: "128Mi", cpu: "100m" }
          limits: { memory: "256Mi", cpu: "300m" }
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-canary-svc
spec:
  type: ClusterIP
  selector:
    app: aceest-canary
  ports:
  - port: 80
    targetPort: 5000
