k8s-cloud/04-ab-testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-version-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-ab
      version: a
  template:
    metadata:
      labels:
        app: aceest-ab
        version: a
    spec:
      containers:
      - name: aceest
        image: ihyth32/aceest-fitness:v4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests: { memory: "128Mi", cpu: "100m" }
          limits: { memory: "256Mi", cpu: "300m" }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-version-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-ab
      version: b
  template:
    metadata:
      labels:
        app: aceest-ab
        version: b
    spec:
      containers:
      - name: aceest
        image: ihyth32/aceest-fitness:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests: { memory: "128Mi", cpu: "100m" }
          limits: { memory: "256Mi", cpu: "300m" }
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-ab-svc
spec:
  type: ClusterIP
  selector:
    app: aceest-ab
  ports:
  - port: 80
    targetPort: 5000
